k8s/service-port80-to-3000.yaml
apiVersion: v1
kind: Service
metadata:
  name: timecalc-service
spec:
  selector:
    app: timecalc
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
